overflow issue fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main {
+    height: 100vh;
+}
+.chatContainer {
+    height: 95vh;
+}
+.messages {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    scrollbar-width: none;
+  }
